--- a/styles/basics/layout.css
+++ b/styles/basics/layout.css
@@ -1,7 +1,7 @@
 /* Main Layout */
 .main-layout{
     display: grid;
-    grid-template-columns: minmax(20px, 1fr) minmax(auto, 1044px) minmax(20px, 1fr);
+    grid-template-columns: minmax(20px, 1fr) minmax(auto, 980px) minmax(20px, 1fr);
 }
 
 .main-layout > *:not(.full){
@@ -13,4 +13,31 @@
 }
 
 
+/* Card Layout */
 
+.main-content{
+    display: grid;
+    grid-template-rows: minmax(20px, 1fr) 47x;
+}
+
+.card{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    height: 398px;
+}
+
+.card .card-image{
+    grid-column: 1;
+}
+
+.card-title{
+    grid-column: 2;
+}
+.card-text{
+    grid-column: 2;
+}
+.card-btn{
+    grid-column: 2;
+}
+
+.card
