--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@
 @import url(basics/layout.css);
 
 /* COMPONENTS */
-@import url(components/main-header.css)
+@import url(components/main-header.css);
+@import url(components/main-content.css);
 
  
