--- a/styles/components/main-content.css
+++ b/styles/components/main-content.css
@@ -7,21 +7,28 @@
     gap: 80px;
 }
 .card-container{
+    grid-template-rows: 1fr 1fr;
     display: grid;
     gap: 80px;
     grid-row: 1;
+
+    /* grid-template-areas: 1px; do */
 }
+
+ /* differ from card button (rounded etc) to the others (useablility) */
 .card{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto 1fr;
-    gap: 40px;
+    grid-template-rows: auto  1fr auto;
+    justify-items: start;
+    gap: 0 40px;
 }
 
 .card .card-image{
-    width: 100%;
+    height: 100%;
     grid-column: 1;
     grid-row: 1/4;
+    object-fit: cover;
 }
 
 .card-title{
@@ -38,13 +45,26 @@
 }
 .card-btn{
     margin-top: auto;
+    font-size: 1em;
     margin-inline-start: 40px;
-    width: 50%;
-    padding: 3%;
+    border-radius: 2em;
+    border-style: solid;
+    border-color: var(--primary--1);
+    color: var(--primary--1);
+    padding:0.6em 1.5em;
+    letter-spacing: 0.11em;
     grid-column: 2;
     grid-row: 3;
 }
 
+.card-btn:hover{
+    color: green;
+    border-color: green;
+}
+
+.card-btn:hover::after{
+    content: ' →';
+}
 
 .post-navigation{
     grid-row: 2;
