add buttons and space between

--- a/styles/components/main-content.css
+++ b/styles/components/main-content.css
@@ -68,7 +68,21 @@
 
 .post-navigation{
     display: flex;
+    text-align: center;
     grid-row: 2;
     justify-content: space-between;
+    height: 33px;
+    font-size: 1.125rem;
 }
 
+.post-navigation .previous{
+    font-size: 1.125rem;
+    border: none;
+    background-color: white;
+}
+
+.post-navigation .next{
+    font-size: 1.125rem;
+    border: none;
+    background-color: white;
+}
