--- a/styles/setup/vars.css
+++ b/styles/setup/vars.css
@@ -1,5 +1,5 @@
 :root{
    --primary-2: #ffffff;
    --primary-1: #606060;
-   --primary--1: lightgray; 
+   --primary--1: RGBA(194, 194, 194, 1); 
 }
