--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,5 +10,6 @@
 /* COMPONENTS */
 @import url(components/main-header.css);
 @import url(components/main-content.css);
+@import url(components/main-footer.css);
 
  
