--- a/styles/basics/layout.css
+++ b/styles/basics/layout.css
@@ -1,7 +1,10 @@
 /* Main Layout */
 .main-layout{
     display: grid;
-    grid-template-columns: minmax(20px, 1fr) minmax(auto, 980px) minmax(20px, 1fr);
+    grid-template-columns: 
+    minmax(20px, 1fr) 
+    minmax(auto, 980px) 
+    minmax(20px, 1fr);
 }
 
 .main-layout > *:not(.full){
@@ -11,4 +14,5 @@
 .main-layout > *.full{
     grid-column: 1 / -1;  
 }
+
 
