--- a/styles/components/main-footer.css
+++ b/styles/components/main-footer.css
@@ -12,11 +12,35 @@
 }
 
 .main-footer .footer-social{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
     margin-bottom: 80px;
+    text-align: center;
+}
+
+.main-footer .footer-social > *{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: RGBA(229, 229, 229, 1);
+    width: 43px;
+    height: 43px;
+    background-color: var(--primary--1);;
+}
+
+.main-footer .footer-social li{
+    cursor: pointer;    
+}
+
+.main-footer .footer-social  a{
+    text-decoration: none;
+    color: white;
 }
 
 .main-footer .footer-rights{
-    color: #A6A6A6
+    color: #A6A6A6;
 }
+
 
 
