Add font face family fa media

--- a/styles/setup/typeography.css
+++ b/styles/setup/typeography.css
@@ -4,3 +4,8 @@
     src: url(/fonts/Lato/Lato-Regular.ttf);
 }
 
+@font-face{
+    font-family: fa;
+    src: url(/fonts/fa/fa-brands-400.ttf);
+}
+
