modify media fa

--- a/styles/setup/typeography.css
+++ b/styles/setup/typeography.css
@@ -9,3 +9,22 @@
     src: url(/fonts/fa/fa-brands-400.ttf);
 }
 
+.fa::before {
+  font-family: fa;
+}
+
+.fa.facebook::before {
+  content: "\f39e";
+}
+
+.fa.twitter::before {
+  content: "\e61b";
+}
+
+.fa.behance::before {
+  content: "\f1b4";
+}
+
+.fa.dribbble::before {
+  content: "\f17d";
+}
