--- a/styles/components/main-content.css
+++ b/styles/components/main-content.css
@@ -11,39 +11,38 @@
     display: grid;
     gap: 80px;
     grid-row: 1;
-
-    /* grid-template-areas: 1px; do */
 }
 
- /* differ from card button (rounded etc) to the others (useablility) */
 .card{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto  1fr auto;
     justify-items: start;
     gap: 0 40px;
+    grid-template-areas: 
+    "i t"
+    "i p"
+    "i b";
 }
 
 .card .card-image{
+    grid-area: i;
     height: 100%;
-    grid-column: 1;
-    grid-row: 1/4;
     object-fit: cover;
 }
 
 .card-title{
+    grid-area: t;
     margin-inline-start: 40px;
     margin-top: 0;
-    grid-column: 2;
-    grid-row: 1;
 }
 .card-text{
+    grid-area: p;
     margin-inline-start: 40px;
     margin-top: 0;
-    grid-column: 2;
-    grid-row: 2;
 }
 .card-btn{
+    grid-area: b;
     margin-top: auto;
     font-size: 1em;
     margin-inline-start: 40px;
@@ -53,8 +52,6 @@
     color: var(--primary--1);
     padding:0.6em 1.5em;
     letter-spacing: 0.11em;
-    grid-column: 2;
-    grid-row: 3;
     cursor: pointer;
 }
 
