--- a/styles/setup/mq.css
+++ b/styles/setup/mq.css
@@ -9,6 +9,24 @@
         border-inline-start: 1px solid #ccc;
         box-shadow: -2px 0px 6px 1px #000;
         flex-direction: column;
+        transition: 0.6s;
+        transform: translateX(100%);
+    }
+
+    body.menu-open .main-nav-list{
+        transform: translateX(0);
+    }  
+
+    .main-header .main-nav-list li a {
+        background-color: #ffffffd1;
+        box-shadow: inset 0 -10px 0 0 #ffffffd1;
+        color: #000;
+    }
+
+    .main-header .main-nav-list li {
+        background-color: #ffffffd1;
+        border-color:  #ffffffd1;
+        height: 80px
     }
 }
 
