linking main screen component to stylecss

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,7 @@
 @import url(components/main-header.css);
 @import url(components/main-content.css);
 @import url(components/main-footer.css);
+@import url(components/main-screen.css);
 
 
  
